tests/integration/snapshots/integration__conformance__n_object_missing_semicolon.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
command: "jjp"
status: 1
success: false
stdout ---
{"a" "b"}
stderr ---
error: expected colon after key, found `"b"`
 --> stdin:1:6
  |
1 | {"a" "b"}
  |  --- ^^^
  |  |
  |  expected due to `"a"`
  |
help: insert the missing colon
  |
1 | {"a":  "b"}
  |     +
