tests/integration/snapshots/integration__conformance__n_object_missing_value.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
{"a":
stdout ---

stderr ---
error: expected json value, found no significant characters
 --> stdin:1:5
  |
1 | {"a":
  |     ^
  |     |
  |     expected due to `:`
  |
help: insert a placeholder value
  |
1 | {"a": "rust is a must"
  |       ++++++++++++++++
