tests/integration/snapshots/integration__conformance__n_object_no-colon.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
{"a"
stdout ---

stderr ---
error: expected colon after key, found no significant characters
 --> stdin:1:4
  |
1 | {"a"
  |  --^
  |  |
  |  expected due to `"a"`
  |
help: insert colon, placeholder value, and closing curly brace
  |
1 | {"a": "garlic bread" }
  |     ++++++++++++++++++
