tests/integration/snapshots/integration__conformance__n_object_non_string_key.json-format.snap
---
source: tests/integration/conformance.rs
expression: output.snapshot_display()
---
args: ["format"]
status: 1
success: false
stdin ---
{1:1}
stdout ---

stderr ---
error: expected entry or closed delimiter `}`, found `1`
 --> stdin:1:2
  |
1 | {1:1}
  | -^
  | |
  | expected due to `{`
